# ELF-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: PUBLIC_PROMOTION_JA.md  PYTHON_API_MANUAL.md  PYTHON_INTERFACE_DESIGN.md
scripts/: crawl_examples.py  crawl_help.py  crawl_python.py  crawl_wiki.py  wiki_pagelist.txt
src/elf_mcp_server/: __init__.py  elf_knowledge.py  example_playbook.py  examples_access.py  help_access.py  ngsolve_multiphysics.py  policy_lint.py  python_access.py  python_api_manual.py  python_dump.json  python_facade.py  python_interface_design.py  recipes.py  sample_decks.py  server.py  wiki_access.py  wiki_dump.json
src/elf_mcp_server/public_samples/: PUBLICATION_BATCHES.json  README.md  TEAM28.md  VALIDATED_MANIFEST.json
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm001/: acm001.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm002/: acm002.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm003/: acm003.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm004/: acm004.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm005/: acm005.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm006/: acm006.mai  acm006.meg
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm007/: acm007.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm008/: acm008.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm009/: acm009.mai
src/elf_mcp_server/public_samples/application/accelerator_corrector_10/acm010/: acm010.mai
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl001/: acl001.mai  acl001.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl002/: acl002.mai  acl002.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl003/: acl003.mai  acl003.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl004/: acl004.mai  acl004.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl005/: acl005.mai  acl005.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl006/: acl006.mai  acl006.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl007/: acl007.mai  acl007.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl008/: acl008.mai  acl008.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl009/: acl009.mai  acl009.meg
src/elf_mcp_server/public_samples/application/accelerator_magnet_10/acl010/: acl010.mai  acl010.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl001/: atl001.mai  atl001.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl002/: atl002.mai  atl002.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl003/: atl003.mai  atl003.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl004/: atl004.mai  atl004.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl005/: atl005.mai  atl005.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl006/: atl006.mai  atl006.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl007/: atl007.mai  atl007.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl008/: atl008.mai  atl008.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl009/: atl009.mai  atl009.meg
src/elf_mcp_server/public_samples/application/actuator_plunger_10/atl010/: atl010.mai  atl010.meg
src/elf_mcp_server/public_samples/application/eddy_current_brake_10/ebl001/: ebl001.mai  ebl001.meg
src/elf_mcp_server/public_samples/application/eddy_current_brake_10/ebl002/: ebl002.mai  ebl002.meg
src/mcp_server_elf/: __init__.py  elf_knowledge.py  examples_access.py  examples_dump.json  help_access.py  help_dump.json  python_access.py  server.py  wiki_access.py  wiki_dump.json
tests/: test_smoke.py
(+2274 files in other folders)
