[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ELF-mcp-server"
version = "1.43.0"
description = "MCP server for ELF600 electromagnetic analysis docs, workflow recipes, Cubit MEG export notes, and 586 verified public ELF/MAGIC .mai/.meg sample decks."
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [{name = "Kengo Sugahara", email = "ksugahar@ele.kindai.ac.jp"}]
keywords = ["mcp", "model-context-protocol", "elf", "elf600", "electromagnetic", "fem", "bem", "eddy-current", "magnetostatic", "magic", "elfin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/ksugahar/ELF-mcp-server"
Repository = "https://github.com/ksugahar/ELF-mcp-server"
Issues = "https://github.com/ksugahar/ELF-mcp-server/issues"
"ELF600 Vendor" = "https://www.science-solutions.jp/elf/"

[project.scripts]
elf-mcp-server = "elf_mcp_server.server:main"
elf-mcp-policy-lint = "elf_mcp_server.policy_lint:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elf_mcp_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/elf_mcp_server/help_dump.json" = "elf_mcp_server/help_dump.json"
"src/elf_mcp_server/examples_dump.json" = "elf_mcp_server/examples_dump.json"
"src/elf_mcp_server/wiki_dump.json" = "elf_mcp_server/wiki_dump.json"
"src/elf_mcp_server/python_dump.json" = "elf_mcp_server/python_dump.json"

[tool.hatch.build.targets.sdist]
include = [
    "src/elf_mcp_server",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
